fixing button on dropdown on mobile problem

--- a/p2pu-bootstrap-3/sass/_navigations.scss
+++ b/p2pu-bootstrap-3/sass/_navigations.scss
@@ -176,7 +176,7 @@ $navbar-light: $gray-snow;
 		line-height: 2;
 		margin-top: -34px;
 		position: relative;
-		z-index: 2;
+		z-index: 10;
 	}
 
 	@media (min-width: $grid-float-breakpoint) {
